--- a/css/component/hero.css
+++ b/css/component/hero.css
@@ -143,16 +143,6 @@
 //   background-position: center center;
 // }
 
-.views-row {
-  margin-bottom: 3rem;
-}
-
-/*.header-menu ul.links {
-  position: absolute;
-  right: 0px;
-  top: 0;
-}*/
-
 div.block-layout-custom-block[style] {
   padding-top: 10px;
 }
